--- a/api/templates/add_dvd.html
+++ b/api/templates/add_dvd.html
@@ -58,22 +58,22 @@
 
     </style>
 <head>
-    <title>Add DVD</title>
+    <title>Add Product</title>
 </head>
 <body>
     <div class="addd">
-    <h1>Add DVD</h1>
+    <h1>Add Product</h1>
     <form method="POST" action="{{ url_for('dvd.add_dvd') }}">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required><br><br>
-        <label for="category">Category:</label>
-        <input type="text" id="category" name="category" required><br><br>
-        <label for="running_time">Running Time:</label>
-        <input type="text" id="running_time" name="running_time" required><br><br>
-        <label for="year">Year of Release:</label>
+        <label for="category">Image url:</label>
+        <input type="text" id="category" name="category" required><br><br>       
+        <label for="year">Description</label>
         <input type="text" id="year" name="year" required><br><br>
         <label for="price">Price:</label>
         <input type="text" id="price" name="price" required><br><br>
+        <label for="url">Link URL:</label>
+        <input type="text" id="url" name="url" required><br><br>
         <input type="submit" value="Add">
     </form>
 </div>
