--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -52,9 +52,11 @@
         </div> 
         {% else %}
         <a href="/">Home</a>  
+        <a href="/top-10">Top 10 Camping Products on Amazon</a> 
+        <a href="/posts">posts</a>
         <div class="right">
             <a href="/login">Sign In</a>
-            <a href="/signup">Sign Up</a>
+            <!--<div<a href="/signup">Sign Up</a></div> -->
             
         </div>   
         
