--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -115,7 +115,7 @@
                     Screw Cap/Snap Cap/Handle(Food Grade PP)
                     Suction Tube/Sealing Ring(Food Grade Silicone)
                     Sution Nozzle(Food Grade Silicone)</p>
-                <a class="product-link" href="https://www.amazon.com/POTATO-Handles-Toddler-babies-Months/dp/B08616LRLR/?_encoding=UTF8&pd_rd_w=ALrpT&content-id=amzn1.sym.b8021c1f-4893-4f33-9237-ab7efbc6b394&pf_rd_p=b8021c1f-4893-4f33-9237-ab7efbc6b394&pf_rd_r=QV350V11Q75T6X5SF11T&pd_rd_wg=iNrua&pd_rd_r=9f91ec84-15e6-42c5-8e38-4f3bfd2c3418&ref_=pd_gw_bmx_gp_u19i62do">Buy on Amazon</a>
+                <a class="product-link" href="https://amzn.to/3rcsDjX">Buy on Amazon</a>
             </div>
             <!-- Repeat the product-card div for the remaining 19 products -->
             <!-- Remember to replace the placeholder data with actual product information -->
